All tests now passing, fix z-index in css, enter now closes modals

--- a/public/main.css
+++ b/public/main.css
@@ -322,7 +322,7 @@ ul li:hover ul {
   top:0;
   width:100%;
   height:100%;
-  z-order:10;
+  z-index:10;
 }
 #auth-span{
   display:inline-block;
